sumo/tests/dfrouter/errors/network/edge/lane/root__edge__lane#maxspeed__empty11/errors.dfrouter
Error: Attribute 'maxspeed' in definition of lane '1_0' is empty.
Quitting (on error).
